--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,6 +1,6 @@
 * xref:000_Introduction.adoc[]
 * xref:001_GeneralInformation.adoc[]
-* xref:bbc1.adoc[]
+* xref:bbc1.adoc[Introduction]
 * xref:bbc2.adoc[]
 * xref:bbc3.adoc[]
 * xref:bbckey0.adoc[]
